--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
