--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
