--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-adam",
-  "homepage": "https://adamh.ca",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
